Add get room info by room_id
