# go-server/go/api_user.go
@@ -1,18 +1,0 @@
-/*
- * Salamander api server
- *
- * Salamander is the backend api server for HermitCrab.
- *
- * API version: 1.0.1
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-import (
-	"net/http"
-)
-
-func UpdateUser(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	w.WriteHeader(http.StatusOK)
-}
